# rio-agent

./: .gitignore  AGENT.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  FILE_PICKER_TEXT_APPEND_FIX.md  FINAL_FIX.md  FIX_SUMMARY.md  INTEGRATION_COMPLETE.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_NOTES.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_FIX_V2.md  PHASE1_COMPLETE.md  PHASE2_OPTIMIZATION.md  PHASE3_OPTIMIZATION.md  PHASE4_OPTIMIZATION.md  PIPELINE_IMPROVEMENTS.md  Package.swift  QUICK_REFERENCE.md  README.md  README_RUST.md  ROADMAP.md  ROUTER_SKIP_TOOL_FIX.md  RioAgent.entitlements  STREAMING_PERFORMANCE_OPTIMIZATION.md  TESTING_GUIDE.md  TOKENTRACKER_INTEGRATION.md  TOOL_FLASH_FIX.md  build.sh  create_app.sh  debug_render.sh  project.yml  quickstart.bat  quickstart.sh  run.sh  start-gui.sh  test_performance.sh  verify_all.sh
.github/workflows/: ci.yml
Agent/: AgentEngine.swift  AgentMemory.swift  CodeNavigator.swift  ContextAwareness.swift  ConversationLoop.swift  ConversationManager.swift  CriticService.swift  IntelligentAssistantConfig.swift  IntelligentCodeAnalyzer.swift  IntelligentLearningSystem.swift  MultiAgentEngine.swift  MultiFileCoordinator.swift  ProjectAnalyzer.swift  RefactoringAdvisor.swift  RuntimeModelRoleBuilder.swift  TaskPlanner.swift  TextToolCallSafetyNet.swift  VerifierService.swift
App/: AppState.swift  RioAgentApp.swift
Models/: ConfigSet.swift  Conversation.swift  ConversationSidebarItem.swift  ErrorRecoveryContext.swift  ExecutionPipeline.swift  Message.swift  ModelCapabilities.swift  MultiAgentConfig.swift  SystemPromptLayer.swift  ToolCall.swift
Optimizations/: FIXES_COMPLETED.md  IMPLEMENTATION_GUIDE.md  ImprovedModelCapabilities.swift  README.md  RioAgentError.swift  TokenEstimationTests.swift
Services/: AIService.swift  ClaudeService.swift  OpenAIService.swift  RouterService.swift
Tests/: AIConfigurationTests.swift  AgentActivityGroupSourceTests.swift  AgentEngineRegressionTests.swift  AgentMemoryMarkdownTests.swift  AgentMemoryPersistenceSourceTests.swift  AgentMemoryTestSupport.swift  ClaudeServiceTests.swift  ComposerInputStateTests.swift  ComposerSubmitShortcutSourceTests.swift  ConfigSetManagementSourceTests.swift  ConfigSetTests.swift  ContentViewSourceTests.swift  ContextPanelSourceTests.swift  ContextUsageSourceTests.swift  ConversationCompactorTests.swift  ConversationManagerTests.swift  ConversationPersistenceSourceTests.swift  CopyFeedbackSourceTests.swift  CriticServiceSourceTests.swift  EnhancedChatRuntimeSourceTests.swift  EnhancedMessageBubbleTests.swift  ErrorBannerSourceTests.swift  ErrorRecoveryContextTests.swift  ExecutionPipelineModelTests.swift  ExecutionPipelineStatusSourceTests.swift  ExecutionPipelineViewSourceTests.swift  FileContextDisplaySourceTests.swift  FileOperationAnimationSourceTests.swift  FilePickerLimitSourceTests.swift  FilePickerSearchSourceTests.swift  FileReferenceParserTests.swift  FileSystemEnumerationSourceTests.swift  FileSystemToolTests.swift  FinalAnswerPresentationSourceTests.swift  InputAreaFileContextNoticeSourceTests.swift  KeychainManagerTests.swift  LegacyToolResultDisplaySourceTests.swift  MarkdownRendererSourceTests.swift  MarkdownRendererTests.swift  MemoryNoteDeleteConfirmationSourceTests.swift  (+35 more)
Theme/: Theme.swift
Tools/: ApplyPatchTool.swift  EditFileTool.swift  FileReadTool.swift  FileSystemToolSupport.swift  FileWriteTool.swift  FindFilesTool.swift  ListDirectoryTool.swift  SearchFilesTool.swift  ShellTool.swift  ToolProtocol.swift  ToolRecommender.swift  ToolRegistry.swift
Utils/: ContextBuilder.swift  ConversationCompactor.swift  FileReferenceParser.swift  KeychainManager.swift  Logger.swift  PathSecurity.swift  PermissionManager.swift  ProcessRunner.swift  SystemPromptComposer.swift  TokenTracker.swift  ToolExecutor.swift
ViewModels/: ComposerInputState.swift  NewChatViewModel.swift
Views/: ConfigSetManagementView.swift  ContentView.swift  ContextPanel.swift  EnhancedMessageBubble.swift  EnhancedToolCallCard.swift  ExecutionPipelineView.swift  FileOperationAnimationView.swift  IntelligentAssistantSettingsView.swift  MarkdownRenderer.swift  MessageBubble.swift  MultiAgentSettingsView.swift  NewChatPage.swift  SettingsRecoveryRouter.swift  SettingsView.swift  SidebarConversationListView.swift  TaskPlanView.swift  ToolExecutionView.swift
crates/rio-cli/: Cargo.toml
crates/rio-cli/src/: main.rs
crates/rio-core/: Cargo.toml
crates/rio-core/src/: agent.rs  lib.rs  message.rs  multi_agent.rs  provider.rs  tool.rs
crates/rio-core/tests/: integration_test.rs
crates/rio-identity/: Cargo.toml
crates/rio-identity/src/: identity.rs  lib.rs  manager.rs
crates/rio-memory/: Cargo.toml
crates/rio-memory/src/: decisions.rs  evidence.rs  lessons.rs  lib.rs
crates/rio-providers/: Cargo.toml
crates/rio-providers/src/: claude.rs
crates/rio-router/: Cargo.toml
crates/rio-router/src/: lib.rs  mention.rs  router.rs
crates/rio-security/: Cargo.toml
crates/rio-security/src/: lib.rs
crates/rio-storage/: Cargo.toml
crates/rio-storage/src/: lib.rs
crates/rio-tools/: Cargo.toml
crates/rio-tools/src/: command.rs  file.rs  lib.rs
docs/: DESIGN_DECISIONS.md  PHASE2_DESIGN.md  PHASE2_DESIGN_REVISION.md  SWIFT_TO_RUST_MIGRATION.md  TAURI_ARCHITECTURE.md
rio-agent-ui/: index.html  package-lock.json  package.json
rio-agent-ui/src/: App.svelte  types.ts
rio-agent-ui/src-tauri/: Cargo.toml  tauri.conf.json
rio-agent-ui/src-tauri/icons/: README.md
rio-agent-ui/src-tauri/src/: lib.rs  main.rs  state.rs
rio-agent-ui/src-tauri/src/commands/: config.rs  conversation.rs  mod.rs  tools.rs
rio-agent-ui/src/lib/: ConversationList.svelte  MessageView.svelte  api.ts
