[workspace]
resolver = "2"
members = [
    "crates/rio-core",
    "crates/rio-providers",
    "crates/rio-tools",
    "crates/rio-storage",
    "crates/rio-security",
    "crates/rio-cli",
    "crates/rio-identity",
    "crates/rio-router",
    "crates/rio-memory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Rio Agent Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/rio-agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
keyring = "3.0"

# Others
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
