[package]
name = "rio-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rio-cli"
path = "src/main.rs"

[dependencies]
rio-core = { path = "../rio-core" }
rio-providers = { path = "../rio-providers" }
rio-tools = { path = "../rio-tools" }
rio-storage = { path = "../rio-storage" }
rio-security = { path = "../rio-security" }

clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
