[package]
name = "rio-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Internal dependencies
rio-identity = { path = "../rio-identity" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
