[package]
name = "rio-router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
rio-core = { path = "../rio-core" }
rio-identity = { path = "../rio-identity" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Concurrent data structures
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for @mention parsing
regex = "1.11"

# Async traits
async-trait = "0.1"

# Futures utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
