[package]
name = "rio-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rio-core = { path = "../rio-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
