[package]
name = "rio-agent"
version = "0.1.0"
description = "Rio Agent - AI Programming Assistant"
authors = ["Rio Agent Contributors"]
edition = "2021"

[lib]
name = "rio_agent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rio-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Rio Agent core crates
rio-core = { path = "../../crates/rio-core" }
rio-providers = { path = "../../crates/rio-providers" }
rio-tools = { path = "../../crates/rio-tools" }
rio-storage = { path = "../../crates/rio-storage" }
rio-security = { path = "../../crates/rio-security" }
rio-identity = { path = "../../crates/rio-identity" }
rio-router = { path = "../../crates/rio-router" }
rio-memory = { path = "../../crates/rio-memory" }
futures-util = "0.3.32"
